# py-str-case

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_str_case/: __init__.py
tests/: test_import.py
