[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-str-case"
version = "0.2.1"
description = "Convert strings between camelCase, snake_case, PascalCase, kebab-case, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["string", "case", "convert", "camel", "snake", "kebab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-str-case#readme"
Repository = "https://github.com/philiprehberger/py-str-case"
Issues = "https://github.com/philiprehberger/py-str-case/issues"
Changelog = "https://github.com/philiprehberger/py-str-case/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_str_case"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
